--- a/src/codigo/VentanaCalculadora.form
+++ b/src/codigo/VentanaCalculadora.form
@@ -23,10 +23,16 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
+          <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="display" alignment="0" max="32767" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Component id="RESET" max="32767" attributes="0"/>
+                          <Component id="display" alignment="0" max="32767" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                  </Group>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
@@ -66,29 +72,48 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="Buttonresta" min="-2" pref="127" max="-2" attributes="0"/>
-                          <Component id="Buttondividir" alignment="0" min="-2" pref="127" max="-2" attributes="0"/>
-                          <Component id="Buttonx" alignment="0" min="-2" pref="127" max="-2" attributes="0"/>
-                          <Component id="Buttonsuma" alignment="0" min="-2" pref="127" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Component id="Buttonmultiplicar" min="-2" pref="127" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="Raiz" pref="143" max="32767" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Group type="102" attributes="0">
+                                      <Component id="Buttondividir" min="-2" pref="127" max="-2" attributes="0"/>
+                                      <EmptySpace max="-2" attributes="0"/>
+                                      <Component id="Logaritmo" max="32767" attributes="0"/>
+                                  </Group>
+                                  <Group type="102" attributes="0">
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="Buttonsuma" min="-2" pref="127" max="-2" attributes="0"/>
+                                          <Component id="Buttonresta" min="-2" pref="127" max="-2" attributes="0"/>
+                                      </Group>
+                                      <EmptySpace max="-2" attributes="0"/>
+                                      <Component id="nºelevado" max="32767" attributes="0"/>
+                                  </Group>
+                              </Group>
+                              <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="display" min="-2" pref="79" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="Button7" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
                   <Component id="Button8" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
                   <Component id="Button9" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
-                  <Component id="Buttonx" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
+                  <Component id="Buttonmultiplicar" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
+                  <Component id="Raiz" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -96,21 +121,32 @@
                   <Component id="Button6" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
                   <Component id="Button5" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
                   <Component id="Button4" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
+                  <Component id="Logaritmo" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="Button1" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
-                  <Component id="Button2" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
-                  <Component id="Button3" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
-                  <Component id="Buttonresta" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="Button1" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
+                          <Component id="Button2" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
+                          <Component id="Button3" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
+                          <Component id="Buttonresta" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="Buttonsuma" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
+                          <Component id="Buttonigual" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
+                          <Component id="Button0" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
+                      <Component id="nºelevado" min="-2" pref="223" max="-2" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="Buttonsuma" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
-                  <Component id="Buttonigual" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
-                  <Component id="Button0" alignment="3" min="-2" pref="103" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace pref="29" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+              <Component id="RESET" min="-2" pref="81" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -150,6 +186,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="9"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Button9ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="Button5">
       <Properties>
@@ -158,6 +197,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="5"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Button5ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="Button4">
       <Properties>
@@ -166,6 +208,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="4"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Button4ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="Button6">
       <Properties>
@@ -174,6 +219,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="6"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Button6ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="Button7">
       <Properties>
@@ -182,6 +230,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="7"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Button7ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="Button3">
       <Properties>
@@ -190,6 +241,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="3"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Button3ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="Button1">
       <Properties>
@@ -198,6 +252,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="1"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Button1ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="Button2">
       <Properties>
@@ -210,15 +267,15 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Button2ActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="Buttonx">
+    <Component class="javax.swing.JButton" name="Buttonmultiplicar">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="48" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="x"/>
+        <Property name="text" type="java.lang.String" value="*"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ButtonxActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ButtonmultiplicarActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="Button0">
@@ -239,6 +296,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="="/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ButtonigualActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="Buttonsuma">
       <Properties>
@@ -247,6 +307,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="+"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ButtonsumaActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="Buttondividir">
       <Properties>
@@ -255,6 +318,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="/"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ButtondividirActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="Buttonresta">
       <Properties>
@@ -265,6 +331,52 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ButtonrestaActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="RESET">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Bodoni MT Black" size="48" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="RESET"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="RESETActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="Raiz">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="48" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Raiz"/>
+        <Property name="toolTipText" type="java.lang.String" value=""/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="RaizActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="Logaritmo">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="48" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Log"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="LogaritmoActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="n&#xba;elevado">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="48" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="x^2"/>
+        <Property name="toolTipText" type="java.lang.String" value=""/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="n&#xba;elevadoActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
